src/objects/fferpcore__FeatureConsoleFeatureParameter__mdt.object
<CustomObject>
    <fields>
        <fullName>fferpcore__FeatureStep__c</fullName>
        <label>Feature Step</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ParameterName__c</fullName>
        <label>Parameter Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ParameterType__c</fullName>
        <label>Parameter Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ParameterValueOnDisable__c</fullName>
        <label>Parameter Value On Disable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ParameterValueOnEnable__c</fullName>
        <label>Parameter Value On Enable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Feature Parameter</label>
    <pluralLabel>Feature Parameters</pluralLabel>
</CustomObject>